--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -13,21 +14,33 @@
         <form>
             <h1>Book Information</h1>
 
-            <label for="title">Title</label>
-            <input type="text" name="title" id="title">
+            <div>
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title">
+            </div>
 
-            <label for="author">Author</label>
-            <input type="text" name="author" id="author">
+            <div>
+                <label for="author">Author</label>
+                <input type="text" name="author" id="author">
+            </div>
 
-            <label for="pages">How many pages?</label>
-            <input type="number" name="pages" id="pages">
+            <div>
+                <label for="pages">How many pages?</label>
+                <input type="number" name="pages" id="pages">
+            </div>
 
-            <label for="read">I have read this book.</label>
-            <input type="checkbox" name="read" id="read">
+            <div>
+                <label for="read">I have read this book.</label>
+                <input type="checkbox" name="read" id="read">
+            </div>
 
             <button type="submit" id="submit">Add</button>
         </form>
     </div>
+
+    <div id="card-container">
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
