Add dialog modal for form
The book info form pops up when the add book button is pressed

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
     <button id="add-book">+ Add Book</button>
 
-    <div id="book-form">
+    <dialog>
         <form>
+            <button id="close">X</button>
             <h1>Book Information</h1>
 
             <div>
@@ -36,9 +37,10 @@
 
             <button type="submit" id="submit">Add</button>
         </form>
-    </div>
+    </dialog>
 
     <div id="card-container">
+
     </div>
 
     <script src="script.js"></script>
