Stop cards from clearing when modal is closed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <dialog>
         <form>
-            <button id="close">X</button>
+            <button value="cancel" id="close" formmethod="dialog">X</button>
             <h1>Book Information</h1>
 
             <div>
