--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div id="header">
         <h1>The Library</h1>
-        <button id="add-book"><span>+</span> Add Book</button>
+        <button id="add-book">+ <span>Add Book</span></button>
     </div>
     
 
